--- a/app22web/package.json
+++ b/app22web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
+    "jsonfile": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
